Update index.html photos

--- a/index.html
+++ b/index.html
@@ -325,22 +325,22 @@
     <!-- Gallery Section -->
     <section class="gallery">
         <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1582268611958-ebfd161ef9cf?w=800" alt="Beach view">
+            <img src="https://a0.muscache.com/im/pictures/abf31be6-80f4-45a0-9005-6de5544bb9ba.jpg?im_w=1440" alt="Patio">
         </div>
         <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1540541338287-41700207dee6?w=800" alt="Luxury interior">
+            <img src="https://a0.muscache.com/im/pictures/hosting/Hosting-563210310041867362/original/2911e83a-e70f-4837-aa07-e3b35f5fa628.jpeg?im_w=1440" alt="Balcony">
         </div>
         <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1571896349842-33c89424de2d?w=800" alt="Ocean sunset">
+            <img src="https://a0.muscache.com/im/pictures/9f516ba0-611e-44ca-83a5-8eeea8a21689.jpg?im_w=1440" alt="Property View">
         </div>
         <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?w=800" alt="Luxury bedroom">
+            <img src="https://a0.muscache.com/im/pictures/a615cd42-c1e3-41c6-a258-e7baa44c7db0.jpg?im_w=1440" alt="Luxury Bedroom">
         </div>
         <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1499793983690-e29da59ef1c2?w=800" alt="Beach sunset">
+            <img src="https://a0.muscache.com/im/pictures/f3332c16-daf8-4d46-b85a-ec8add911230.jpg?im_w=1440" alt="Secret Garden">
         </div>
         <div class="gallery-item">
-            <img src="https://images.unsplash.com/photo-1502005229762-cf1b2da7c5d6?w=800" alt="Luxury pool">
+            <img src="https://a0.muscache.com/im/pictures/73965521-32ad-4a77-b29f-045e3a9ea4a5.jpg?im_w=720" alt="Private Pool">
         </div>
     </section>
 
@@ -405,3 +405,4 @@
     </footer>
 </body>
 </html>
+
