added photos - index.html

--- a/index.html
+++ b/index.html
@@ -342,6 +342,18 @@
         <div class="gallery-item">
             <img src="https://a0.muscache.com/im/pictures/73965521-32ad-4a77-b29f-045e3a9ea4a5.jpg?im_w=720" alt="Private Pool">
         </div>
+        <div class="gallery-item">
+            <img src="https://a0.muscache.com/im/pictures/c97145a2-efcd-4981-bf63-b3e656edeee5.jpg?im_w=1440" alt="Kehena Beach">
+        </div>
+        <div class="gallery-item">
+            <img src="https://a0.muscache.com/im/pictures/a565b679-84b2-45ae-8025-2bbb72da77d8.jpg?im_w=1440" alt="Spa Room">
+        </div>
+        <div class="gallery-item">
+            <img src="https://a0.muscache.com/im/pictures/76002e60-3e42-44ba-aa0f-ce22ab67adfe.jpg?im_w=1440" alt="Entryway">
+        </div>
+        <div class="gallery-item">
+            <img src="https://a0.muscache.com/im/pictures/hosting/Hosting-563210310041867362/original/94c2ae98-5b2e-47b9-b2d0-e6982c37aaa7.jpeg?im_w=1440" alt="Patio View">
+        </div>
     </section>
 
     <!-- Features Section -->
@@ -405,6 +417,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
