Amenities update index.html

--- a/index.html
+++ b/index.html
@@ -367,14 +367,9 @@
                     <p>Wake up to stunning panoramic views of the Pacific Ocean</p>
                 </div>
                 <div class="feature">
-                    <div class="feature-icon">✨</div>
-                    <h3>Luxury Interiors</h3>
-                    <p>Elegantly designed spaces with premium furnishings and finishes</p>
-                </div>
-                <div class="feature">
                     <div class="feature-icon">🏖️</div>
-                    <h3>Private Beach Access</h3>
-                    <p>Direct access to pristine Kehena Beach</p>
+                    <h3>Beach Access</h3>
+                    <p>Direct access to black sand Kehena Beach</p>
                 </div>
                 <div class="feature">
                     <div class="feature-icon">💒</div>
@@ -385,11 +380,6 @@
                     <div class="feature-icon">🌴</div>
                     <h3>Tropical Paradise</h3>
                     <p>Surrounded by lush tropical landscapes and natural beauty</p>
-                </div>
-                <div class="feature">
-                    <div class="feature-icon">🌅</div>
-                    <h3>Sunset Views</h3>
-                    <p>Breathtaking sunsets from your private lanai</p>
                 </div>
             </div>
         </div>
@@ -417,6 +407,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
